--- a/code/Pacman/Pacman.vcxproj
+++ b/code/Pacman/Pacman.vcxproj
@@ -76,7 +76,12 @@
     <ClCompile Include="KeyManager.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Map.cpp" />
-    <ClCompile Include="Tiles.cpp" />
+    <ClCompile Include="Material.cpp" />
+    <ClCompile Include="Model.cpp" />
+    <ClCompile Include="MtlReader.cpp" />
+    <ClCompile Include="ObjReader.cpp" />
+    <ClCompile Include="PolygonGroup.cpp" />
+    <ClCompile Include="Tile.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h" />
@@ -89,8 +94,13 @@
     <ClInclude Include="KeyListener.h" />
     <ClInclude Include="KeyManager.h" />
     <ClInclude Include="Map.h" />
+    <ClInclude Include="Material.h" />
+    <ClInclude Include="Model.h" />
+    <ClInclude Include="MtlReader.h" />
+    <ClInclude Include="ObjReader.h" />
+    <ClInclude Include="PolygonGroup.h" />
     <ClInclude Include="stdafx.h" />
-    <ClInclude Include="Tiles.h" />
+    <ClInclude Include="Tile.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Shader.fx" />
