--- a/code/Pacman/Pacman.vcxproj.filters
+++ b/code/Pacman/Pacman.vcxproj.filters
@@ -78,6 +78,12 @@
     <ClCompile Include="SmartAI.cpp">
       <Filter>Ghost</Filter>
     </ClCompile>
+    <ClCompile Include="LevelReader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Route.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -143,8 +149,15 @@
     <ClInclude Include="SmartAI.h">
       <Filter>Ghost</Filter>
     </ClInclude>
+    <ClInclude Include="LevelReader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Route.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Shader.fx" />
+    <None Include="Shader.fxo" />
   </ItemGroup>
 </Project>
